crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__compare__multiple_equals.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/compare/multiple_equals.py
---
## AST

```
Module(
    ModModule {
        range: 0..41,
        body: [
            Assign(
                StmtAssign {
                    range: 25..32,
                    targets: [
                        Compare(
                            ExprCompare {
                                range: 25..29,
                                left: Name(
                                    ExprName {
                                        range: 25..26,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    Eq,
                                ],
                                comparators: [
                                    Name(
                                        ExprName {
                                            range: 29..29,
                                            id: "",
                                            ctx: Invalid,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            range: 31..32,
                            id: "y",
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    range: 33..40,
                    targets: [
                        Compare(
                            ExprCompare {
                                range: 33..37,
                                left: Name(
                                    ExprName {
                                        range: 33..34,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    NotEq,
                                ],
                                comparators: [
                                    Name(
                                        ExprName {
                                            range: 37..37,
                                            id: "",
                                            ctx: Invalid,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            range: 39..40,
                            id: "y",
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # This is not JavaScript
2 | x === y
  |     ^ Syntax Error: Expected an expression
3 | x !== y
  |


  |
1 | # This is not JavaScript
2 | x === y
  | ^^^^ Syntax Error: Invalid assignment target
3 | x !== y
  |


  |
1 | # This is not JavaScript
2 | x === y
3 | x !== y
  |     ^ Syntax Error: Expected an expression
  |


  |
1 | # This is not JavaScript
2 | x === y
3 | x !== y
  | ^^^^ Syntax Error: Invalid assignment target
  |
